# subsplease

./: .gitignore  Makefile  README.md  pyproject.toml
migrations/: 001_init.sql  002_dir_names.sql  003_update_episode_table.sql  004_new_fields.sql  005_sakugabooru_tag.sql  006_jikan.sql
subsplease/: api.py  config.py  date.py  day.py  db.py  display.py  images.py  jikan.py  main.py  metadata.py  nyaa.py  parser.py  result.py  sakugabooru.py  schedule.py  seadex.py  season.py  subscription.py  torrent.py  utils.py
subsplease/command/: __init__.py  command.py  parser.py  specification.py  typedefs.py
subsplease/meta/: tenrai.py
subsplease/torrent/: __init__.py  service.py
tests/: test_config.py
