[project]
name = "subsplease"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "feedparser>=6.0.12",
    "msgspec>=0.20.0",
    "rapidfuzz>=3.14.3",
    "requests>=2.32.5",
    "rich>=14.3.1",
    "selectolax>=0.4.6",
    "transmission-rpc>=7.0.11",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
project-excludes = [
    "**/result.py",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyrefly>=0.52.0",
]

[project.scripts]
subsplease = "subsplease.main:main"
